--- a/DOM.html
+++ b/DOM.html
@@ -110,7 +110,7 @@ DOM.ready(function(){
     link.html("<script src=\"testscript.js\"><" + "/script>updated");
 
     try {
-        link.__proto__.foo = "bar";
+        link.__proto__.get = "bar";
     } catch (err) {
         console.log("fail to change prototype")
     }
