add call method and remove focus/blur + other improvements

--- a/DOM.html
+++ b/DOM.html
@@ -96,7 +96,7 @@ DOM.ready(function(){
     links.set("data-test", "test");
     links.set("href", "#test");
 
-    link.focus();
+    link.call("focus");
 
     links.addClass("cc");
 
