add nextAll, prevAll, children methods and update findAll

--- a/test/specs.html
+++ b/test/specs.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Jasmine Spec Runner for DOM.js</title>
+  <title>DOM.js specs</title>
 
   <link rel="stylesheet" type="text/css" href="lib/jasmine-2.0.0-alpha/jasmine.css">
 
