add contains spec

--- a/test/specs.html
+++ b/test/specs.html
@@ -6,18 +6,19 @@
 
   <link rel="stylesheet" type="text/css" href="lib/jasmine-2.0.0-alpha/jasmine.css">
 
-  <script type="text/javascript" src="lib/jasmine-2.0.0-alpha/jasmine.js"></script>
-  <script type="text/javascript" src="lib/jasmine-2.0.0-alpha/jasmine-html.js"></script>
-  <script type="text/javascript" src="lib/jasmine-2.0.0-alpha/boot.js"></script>
+  <script src="lib/jasmine-2.0.0-alpha/jasmine.js"></script>
+  <script src="lib/jasmine-2.0.0-alpha/jasmine-html.js"></script>
+  <script src="lib/jasmine-2.0.0-alpha/boot.js"></script>
 
-  <script type="text/javascript" src="lib/jasmine-dom/jasmine-dom-fixtures.js"></script>
-  <script type="text/javascript" src="lib/jasmine-dom/jasmine-dom-matchers.js"></script>
+  <script src="lib/jasmine-dom/jasmine-dom-fixtures.js"></script>
+  <script src="lib/jasmine-dom/jasmine-dom-matchers.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="../src/DOM.js"></script>
+  <script src="../src/DOM.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/DOMNode.find.spec.js"></script>
+  <script src="spec/find.spec.js"></script>
+  <script src="spec/contains.spec.js"></script>
 
 </head>
 
