--- a/test/specs.html
+++ b/test/specs.html
@@ -20,6 +20,7 @@
   <script src="spec/find.spec.js"></script>
   <script src="spec/contains.spec.js"></script>
   <script src="spec/on.spec.js"></script>
+  <script src="spec/capture.spec.js"></script>
 
 </head>
 
