--- a/test/specs.html
+++ b/test/specs.html
@@ -21,6 +21,7 @@
   <script src="spec/contains.spec.js"></script>
   <script src="spec/on.spec.js"></script>
   <script src="spec/capture.spec.js"></script>
+  <script src="spec/off.spec.js"></script>
 
 </head>
 
