add data and fire specs + fix bug and improve other specs

--- a/test/specs.html
+++ b/test/specs.html
@@ -22,6 +22,8 @@
   <script src="spec/on.spec.js"></script>
   <script src="spec/capture.spec.js"></script>
   <script src="spec/off.spec.js"></script>
+  <script src="spec/fire.spec.js"></script>
+  <script src="spec/data.spec.js"></script>
 
 </head>
 
