--- a/test/specs.html
+++ b/test/specs.html
@@ -25,6 +25,7 @@
   <script src="spec/off.spec.js"></script>
   <script src="spec/fire.spec.js"></script>
   <script src="spec/data.spec.js"></script>
+  <script src="spec/get.spec.js"></script>
 
 </head>
 
