--- a/test/specs.html
+++ b/test/specs.html
@@ -26,6 +26,7 @@
   <script src="spec/fire.spec.js"></script>
   <script src="spec/data.spec.js"></script>
   <script src="spec/get.spec.js"></script>
+  <script src="spec/set.spec.js"></script>
 
 </head>
 
