--- a/test/specs.html
+++ b/test/specs.html
@@ -27,6 +27,7 @@
   <script src="spec/data.spec.js"></script>
   <script src="spec/get.spec.js"></script>
   <script src="spec/set.spec.js"></script>
+  <script src="spec/traversing.spec.js"></script>
 
 </head>
 
