--- a/test/specs.html
+++ b/test/specs.html
@@ -28,6 +28,7 @@
   <script src="spec/set.spec.js"></script>
   <script src="spec/traversing.spec.js"></script>
   <script src="spec/classes.spec.js"></script>
+  <script src="spec/matches.spec.js"></script>
 
 </head>
 
