add offset spec

--- a/test/specs.html
+++ b/test/specs.html
@@ -29,6 +29,7 @@
   <script src="spec/traversing.spec.js"></script>
   <script src="spec/classes.spec.js"></script>
   <script src="spec/matches.spec.js"></script>
+  <script src="spec/offset.spec.js"></script>
 
 </head>
 
