--- a/test/specs.html
+++ b/test/specs.html
@@ -4,11 +4,10 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>DOM.js specs</title>
 
-  <link rel="stylesheet" type="text/css" href="lib/jasmine-2.0.0-alpha/jasmine.css">
+  <link rel="stylesheet" type="text/css" href="lib/jasmine-1.3.1/jasmine.css">
 
-  <script src="lib/jasmine-2.0.0-alpha/jasmine.js"></script>
-  <script src="lib/jasmine-2.0.0-alpha/jasmine-html.js"></script>
-  <script src="lib/jasmine-2.0.0-alpha/boot.js"></script>
+  <script src="lib/jasmine-1.3.1/jasmine.js"></script>
+  <script src="lib/jasmine-1.3.1/jasmine-html.js"></script>
 
   <script src="lib/jasmine-dom/jasmine-dom-fixtures.js"></script>
   <script src="lib/jasmine-dom/jasmine-dom-matchers.js"></script>
@@ -30,9 +29,39 @@
   <script src="spec/classes.spec.js"></script>
   <script src="spec/matches.spec.js"></script>
   <script src="spec/offset.spec.js"></script>
+  <script src="spec/watch.spec.js"></script>
 
 </head>
 
 <body>
+  <script type="text/javascript">
+    (function() {
+      var jasmineEnv = jasmine.getEnv();
+      jasmineEnv.updateInterval = 1000;
+
+      var trivialReporter = new jasmine.TrivialReporter();
+
+      jasmineEnv.addReporter(trivialReporter);
+
+      jasmineEnv.specFilter = function(spec) {
+        return trivialReporter.specFilter(spec);
+      };
+
+      var currentWindowOnload = window.onload;
+
+      window.onload = function() {
+        if (currentWindowOnload) {
+          currentWindowOnload();
+        }
+        execJasmine();
+      };
+
+      function execJasmine() {
+        jasmineEnv.execute();
+      }
+
+    })();
+  </script>
+
 </body>
 </html>
