add 'create' spec

--- a/test/specs.html
+++ b/test/specs.html
@@ -30,6 +30,7 @@
   <script src="spec/matches.spec.js"></script>
   <script src="spec/offset.spec.js"></script>
   <script src="spec/watch.spec.js"></script>
+  <script src="spec/create.spec.js"></script>
 
 </head>
 
