fix small bugs + add 'manipulation' spec

--- a/test/specs.html
+++ b/test/specs.html
@@ -31,6 +31,7 @@
   <script src="spec/offset.spec.js"></script>
   <script src="spec/watch.spec.js"></script>
   <script src="spec/create.spec.js"></script>
+  <script src="spec/manipulation.spec.js"></script>
 
 </head>
 
