use space-separated args for 'set', 'on' instead of arrays + update 'on'

--- a/src/DOM.html
+++ b/src/DOM.html
@@ -180,7 +180,7 @@ DOM.extend(".editable", {
                 height: (offset.bottom - offset.top) + "px"
             });
 
-            textareaEl.set(["value", "defaultValue"], editable.get("textContent")).call("focus");
+            textareaEl.set("value defaultValue", editable.get("textContent")).call("focus");
         });
     }
 });
