--- a/test/specs.html
+++ b/test/specs.html
@@ -32,6 +32,7 @@
   <script src="spec/watch.spec.js"></script>
   <script src="spec/create.spec.js"></script>
   <script src="spec/manipulation.spec.js"></script>
+  <script src="spec/css.spec.js"></script>
 
 </head>
 
