--- a/test/specs.html
+++ b/test/specs.html
@@ -33,6 +33,7 @@
   <script src="spec/create.spec.js"></script>
   <script src="spec/manipulation.spec.js"></script>
   <script src="spec/css.spec.js"></script>
+  <script src="spec/extend.spec.js"></script>
 
 </head>
 
