fix specs for ie

--- a/test/specs.html
+++ b/test/specs.html
@@ -13,7 +13,7 @@
   <script src="lib/jasmine-dom/jasmine-dom-matchers.js"></script>
 
   <!-- include source files here... -->
-  <script src="../src/DOM.js"></script>
+  <script src="../src/DOM.js" data-htc="../src/DOM.htc"></script>
 
   <!-- include spec files here... -->
   <script src="spec/find.spec.js"></script>
