add jsdoc for DOMElementCollection and fix bugs

--- a/src/DOM.html
+++ b/src/DOM.html
@@ -111,7 +111,7 @@ DOM.ready(function(){
     links.addClass("cc");
 
     // data method test
-    link.data("test", "test");
+    link.setData("test", "test");
 
     link.append('<span data-test1="testappend">|append|');
     link.prepend('<span data-test2="testprepend">|prepend|');
