--- a/test/specs.html
+++ b/test/specs.html
@@ -36,6 +36,7 @@
     <script src="spec/manipulation.spec.js"></script>
     <script src="spec/style.spec.js"></script>
     <script src="spec/extend.spec.js"></script>
+    <script src="spec/event.spec.js"></script>
 
 </head>
 <body>
