DOM.js -> better-dom.js + other improvements

--- a/src/better-dom.html
+++ b/src/better-dom.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script type="text/javascript" src="DOM.js" data-htc="DOM.htc"></script>
+<script type="text/javascript" src="better-dom.js" data-htc="better-dom.htc"></script>
 <style type="text/css">
 html, body {
     margin: 0;
