--- a/test/specs.html
+++ b/test/specs.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>DOM.js specs</title>
+    <title>better-dom specs</title>
 
     <link rel="stylesheet" type="text/css" href="lib/jasmine-1.3.1/jasmine.css">
 
@@ -15,7 +15,7 @@
     <script src="lib/jasmine-dom/jasmine-dom-matchers.js"></script>
 
     <!-- include source files here... -->
-    <script src="../src/DOM.js" data-htc="../src/DOM.htc"></script>
+    <script src="../src/better-dom.js" data-htc="../src/better-dom.htc"></script>
 
     <!-- include spec files here... -->
     <script src="spec/find.spec.js"></script>
