--- a/test/speed.html
+++ b/test/speed.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>DOM.js Speed tests</title>
+    <title>better-dom Speed tests</title>
     <script src="speed/lib/benchmark-1.0.0/benchmark.js"></script>
     <script src="speed/lib/jquery-1.9.1/jquery.js"></script>
-    <script src="../src/DOM.js"></script>
+    <script src="../src/better-dom.js"></script>
 </head>
 <body>
     <a href="#" id="test1" data-test="t1"></a>
