call a native method in fire if it exists

--- a/src/better-dom.html
+++ b/src/better-dom.html
@@ -120,7 +120,7 @@ DOM.ready(function(){
     links.set("data-test", "test");
     links.set("href", "#test");
 
-    link.call("focus");
+    link.fire("focus");
 
     links.addClass("cc");
 
